--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "jax>=0.6.1",
     "marimo>=0.13.15",
     "matplotlib>=3.10.3",
+    "micropip>=0.9.0",
 ]
 
 [dependency-groups]
