--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,65 +1,49 @@
-# Simple workflow for deploying a static marimo notebook to GitHub Pages
-name: Deploy Static Marimo App to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
-  # Runs on pushes to the main branch
   push:
     branches: ["main"]
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets the necessary permissions for the GITHUB_TOKEN
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+env:
+  UV_SYSTEM_PYTHON: 1
 
 jobs:
-  # Build job
   build:
-    name: Build Static HTML
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
+      - uses: actions/checkout@v4
+      - name: 🚀 Install uv
+        uses: astral-sh/setup-uv@v6
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-
-      - name: Install dependencies
+          python-version: 3.12
+      - name: 📦 Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install marimo jax jaxlib
-
-      - name: Build static marimo app
-        run: marimo export html your_notebook.py --output index.html
-
-      - name: Upload artifact
+          uv pip install marimo
+      - name: 🛠️ Export notebooks
+        run: |
+          python .github/scripts/build.py
+      - name: 📤 Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload the generated index.html file
-          path: "./index.html"
+          path: _site
 
-  # Deployment job
   deploy:
-    name: Deploy to GitHub Pages
-    # The deployment job needs the build job to be successful
     needs: build
-    runs-on: ubuntu-latest
-
-    # Grant GITHUB_TOKEN the permissions required for deployment
     permissions:
       pages: write
       id-token: write
-
-    # Specify the deployment environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
+    runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GitHub Pages
+      - name: 🚀 Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
