--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "micropip>=0.9.0",
     "numpyro>=0.18.0",
     "polars>=1.31.0",
+    "scipy>=1.16.0",
+    "seaborn>=0.13.2",
 ]
 
 [dependency-groups]
